# mnist-pth-lab

./: .git_commit_msg.txt  .gitignore  AGENTS.zh.md  CHANGELOG.md  CHANGES_CN.md  README.md  README_en.md  RELEASE_NOTES.md  gemini.md  pyproject.toml  requirements.txt  run-uv.bat  run-uv.sh  run_with_uv.md
docs/: NOTES_INDEX.md  targets_and_data_en.md  targets_and_data_zh.md
docs/notes/: dataset_and_tuple.md  epoch.md  epoch_explained.md  linear_forward_calc.md  loss_accuracy_curve.md  pytorch_core_four_params.md  run_with_uv.md  targets_and_data.md  visualize_mnist_plt.md
docs/notes/originals/: LossAccuracyCurve.md  PyTorch 训练核心四参数.md  dataset和truple.md  linear计算过程.md  plt.md  targets 和data.md  vscode hotkeys.md  生命循环.md
src/: dataset.py  eval.py  model.py  pack_idx.py  test.py  train.py  unpack_idx.py  utils.py
src/mnist_pth_lab/: __init__.py  dataset.py  eval.py  model.py  pack_idx.py  test.py  train.py  training_demo.py  unpack_idx.py  utils.py  webapp.py
src/mnist_pth_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mnist_pth_lab/static/: styles.css  vis.js
src/mnist_pth_lab/templates/: index.html  training_demo.html
