[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist-pth-lab"
version = "0.1.0"
description = "A PyTorch MNIST classification project with complete training and evaluation pipeline."
authors = [
  { name = "User", email = "user@example.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "tqdm",
    "seaborn"
]

[project.urls]
"Homepage" = "https://github.com/example/mnist-pth-lab"
